--- a/clipdown/2024/webview/info_download/resource/css/style_download_info.css
+++ b/clipdown/2024/webview/info_download/resource/css/style_download_info.css
@@ -324,6 +324,7 @@ svg {
 .contents_watch .content_aside .content_item .img_box{width: 100px; height: 100px; margin-bottom: 10px;}
 .contents_watch .content_aside .content_item .img_box img{width: 100%; height: 100%; object-fit: contain;}
 .contents_watch .content_aside .content_item .text_description{position: relative; color: #333; font-size: 1.3rem;}
+.contents_watch .content_view .check_btn{padding: 30px 0 15px;}
 .contents_watch .content_view .check_btn label{color: #333;}
 
 
