--- a/clipdown/2024/webview/info_download/resource/css/style_download_info.css
+++ b/clipdown/2024/webview/info_download/resource/css/style_download_info.css
@@ -259,8 +259,8 @@ svg {
 .btn_box{display: flex; flex-direction: row; justify-content: center; margin-top: 40px;}
 .btn_box .btn_clipdown{background: #3ea6ff; color: #0f0f0f; font-size: 2rem; font-weight: 700; padding: 0 24px;}
 .btn_box .btn_clipdown:hover{background: #65b8ff;}
-.check_btn{display: flex; align-items: center; justify-content: center; padding: 15px 0;}
-.check_btn label{font-size: 1.2rem; line-height: 1; cursor: pointer;}
+.check_btn{display: flex; align-items: center; padding: 15px 0;}
+.check_btn label{font-size: 1.2rem; line-height: 1; color: #aaa; cursor: pointer;}
 .check_btn input{margin-right: 5px;}
 
 .section_info{text-align: center;} 
@@ -273,7 +273,7 @@ svg {
 .section_info .sub_title h3{font-size: 2.8rem; font-weight: 600;}
 .section_info .btn_box .btn_display{min-width: 175px;}
 .section_info .btn_box .btn_clipdown{height: 60px; line-height: 6rem; border-radius: 48px;}
-.section_feature .contents{display: flex; flex-direction: row; justify-content: center; padding-top: 32px;}
+.section_feature .contents{display: flex; flex-direction: row; padding-top: 32px;}
 .section_feature .content_item{display: flex; justify-content: center; align-items: center;  flex-direction: column; flex: 1 1 0; max-width: 500px; margin: 16px; text-align: center;}
 .section_feature .content_item .img_box{width: 100px; height: 100px; margin-bottom: 24px;}
 .section_feature .content_item .img_box img{width: 100%; height: 100%; object-fit: contain;}
@@ -325,7 +325,6 @@ svg {
 .contents_watch .content_aside .content_item .img_box img{width: 100%; height: 100%; object-fit: contain;}
 .contents_watch .content_aside .content_item .text_description{position: relative; color: #333; font-size: 1.3rem;}
 .contents_watch .content_view .check_btn{padding: 30px 0 15px;}
-.contents_watch .content_view .check_btn label{color: #333;}
 
 
 @media (min-width: 600px) and (max-width: 1023.9px){
