--- a/clipdown/2024/webview/cashmate/resource/css/style_cashmate.css
+++ b/clipdown/2024/webview/cashmate/resource/css/style_cashmate.css
@@ -562,6 +562,8 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .webview_cashmate .section_mb.section_mypage .input_width_md{width: 100% !important;}
 .webview_cashmate .section_mb.section_mypage .item_logout{text-align: center; padding: 40px 0;}
 .webview_cashmate .section_mb.section_mypage .item_logout p{font-size: 15px; font-size: 1.5rem; margin-bottom: 20px;}
+.webview_cashmate .section_mb.section_mypage .btn_bottom{display: flex; flex-direction: column; justify-content: center; position: fixed; width: 100%; bottom: 0;}
+.webview_cashmate .section_mb.section_mypage .btn_bottom .link_text{font-size: 1.1rem; line-height: 1.6; text-decoration: underline; text-underline-offset: 3px; color: #9fa0a0; text-align: center; padding:60px 10px;}
 .webview_cashmate .section_mb.section_point .contents{padding: 0;}
 .webview_cashmate .section_mb.section_point .guide_noti_box{padding: 20px 20px 10px;}
 .webview_cashmate .section_mb.section_point .content_reward_ad .content_list{height: auto; overflow-y: hidden;}
