--- a/clipdown/2024/webview/info_download/resource/css/style_download_info.css
+++ b/clipdown/2024/webview/info_download/resource/css/style_download_info.css
@@ -326,16 +326,20 @@ svg {
 .contents_watch .content_aside .content_item .text_description{position: relative; color: #333; font-size: 1.3rem;}
 .contents_watch .content_view .check_btn{padding: 30px 0 15px;}
 
-.contents_experience{}
-.contents_experience .section_visual .content_visual{overflow: hidden; display: flex; flex-direction: row-reverse; border-radius: 38.5px;}
+.contents_experience{margin-top: 40px;}
+.contents_experience .section_visual{margin-bottom: 40px;}
+.contents_experience .section_visual .contents{display: flex; justify-content: center;}
+.contents_experience .section_visual .content_visual{overflow: hidden; display: flex; flex-direction: row-reverse; border-radius: 38.5px; width: 90%;}
 .contents_experience .content_visual .content_box{display: flex; flex-direction: column; align-items: center; justify-content: center; flex: 1;}
 .contents_experience .content_visual .content_box img{height: 100%; object-fit: cover;}
-.contents_experience .content_visual .content_box .content_column{display: flex; flex-direction: column; align-items: flex-start; margin: 40px; padding: 0 20px;}
+.contents_experience .content_visual .content_box .content_column{display: flex; flex-direction: column; align-items: flex-start; margin: 40px 20px; padding: 0 20px;}
 .contents_experience .content_visual .content_box .box_logo{min-height: 24px; height: 1.8vw;}
 .contents_experience .content_visual .content_box .content_title{margin-top: 16px;}
 .contents_experience .content_visual .content_box .content_title h2{font-size: 3.4rem; font-weight: 900; letter-spacing: -.1rem;}
 .contents_experience .content_visual .content_box .description{margin-top: 20px; font-size: 1.6rem; font-weight: 600;}
-.contents_experience .section_info h1, .contents_experience .section_info h2, .contents_experience .section_info h2{color: #333;}
+.contents_experience .section_info{margin-bottom: 40px;}
+.contents_experience .section_info h1, .contents_experience .section_info h2{color: #333;}
+.contents_experience .section_info .header_title{margin-top: 20px;}
 .contents_experience .btn_box .btn_clipdown{background: #065fd4; color: #fff; padding: 0 48px;}
 .contents_experience .btn_box .btn_clipdown:hover{background: #0556bf;}
 
