--- a/clipdown/2025/webview/cashmate/resource/css/style_cashmate.css
+++ b/clipdown/2025/webview/cashmate/resource/css/style_cashmate.css
@@ -930,6 +930,8 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .check_today.uncheck{top: -10px; left: -8px; width: 100%; background: #207fd1; color: #fff; z-index: 999;}
 .check_today.uncheck::after{border-top: 5px solid #207fd1;}
 .check_today.uncheck.ani_bounce{animation: bounce 1.8s ease infinite;}
+.contents_attend .btn_area{margin: 0; padding: 10px 0 30px;}
+.contents_attend .btn_attend{display: block; width: 100%; background: #207FD1; color: #fff; border-radius: 5px; font-size: 1.6rem; font-weight: 700; padding: 12px 10px;}
 
 
 
