--- a/clipdown/2025/webview/cashmate/resource/css/style_cashmate.css
+++ b/clipdown/2025/webview/cashmate/resource/css/style_cashmate.css
@@ -13,7 +13,7 @@
 /* Custom layout */
 div, dl, dt, dd, h1, h2, h3, h4, h5, h6,
 form, fieldset, p, th, td, input, textarea,
-select, button, pre, a {font-family:'Malgun Gothic', 'Poppins', Helvetica, sans-serif; font-size:13px; font-size:1.3rem; line-height: 1.4; color:#333;}
+select, button, pre, a {font-family:'NotoSans', 'Poppins', Helvetica, sans-serif; font-size:13px; font-size:1.3rem; line-height: 1.4; color:#333;}
 .wrap{position: relative; width: 100%; height: 100%;}
 .container{position: relative; width: 100%; max-width: 780px; margin: 0 auto; padding: 0;}
 .container:after{content:" "; display:block; clear:both;}
@@ -917,6 +917,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
     * 상단 당첨자 롤링 텍스트
     * 팝업 스타일 및 애니메이션 변경 
 */
+.attend_color_point{color: #207fd1;}
 .contents_ticker{background: #fff536;}
 .ticker_container{display: flex; align-items: center; overflow: hidden; white-space: nowrap; height: 40px; }
 .ticker_container .ticker_rolling{width: 100%; height: 100%; line-height: 3rem; padding: 5px 5px; transform: translateY(0);}
@@ -931,7 +932,293 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .check_today.uncheck::after{border-top: 5px solid #207fd1;}
 .check_today.uncheck.ani_bounce{animation: bounce 1.8s ease infinite;}
 .contents_attend .btn_area{margin: 0; padding: 10px 0 30px;}
-.contents_attend .btn_attend{display: block; width: 100%; background: #207FD1; color: #fff; border-radius: 5px; font-size: 1.6rem; font-weight: 700; padding: 12px 10px;}
+.contents_attend .btn_attend{display: block; width: 100%; background: #207fd1; color: #fff; border-radius: 5px; font-size: 1.6rem; font-weight: 700; padding: 12px 10px;}
+
+.layer_popup .popup_content .header_title{padding: 30px 10px 20px;}
+
+.popup_event_result .header_title h1{font-size: 32px; font-size: 3.2rem; font-weight: 900;}
+.popup_event_result .title_description{font-size: 1.4rem; font-weight: 600; padding: 10px 0;}
+.popup_event_result .popup_wrap_full{position: relative; width: 100%;}
+.popup_event_result .popup_inner{position: relative; margin: 0;}
+.popup_event_result .popup_contents{border: 0; border-radius: 0;}
+.popup_event_result .btn_popup_event{position: relative; margin: 20px 0;}
+.popup_event_result .btn_event_check{width: 100%; height: 48px; padding: 12px 10px; background: #207fd1; color: #fff; font-size: 16px; font-size: 1.6rem; border-radius: 8px;}
+.popup_event_result .btn_event_check.btn_yellow{background: #FFD700; color: #333;}
+
+.ani_state{display: flex; flex-direction: column; align-items: center; justify-content: center; position: relative; padding: 20px 0;}
+.ani_container{display: flex; justify-content: center; position: relative; width: 100%; max-width: 400px;}
+.img_attend_state{display: flex; justify-content: center; position: relative; width: 100%;}
+.ani_state .ani_complete_check {position: relative; height: 150px;}
+.ani_state .img_state_01{position: relative; top: 30px; left: -12px; max-width: 280px;}
+
+.content_today_point .btn_popup_event{}
+.ani_state .img_counter{position: relative; height: 400px;}
+.ani_state .img_counter .img_state_02-01{position: relative; max-width: 124px;}
+.ani_state .img_counter .img_state_02-02{position: relative;  bottom: 220px; left: 0; width: 100%; z-index: 0;}
+.ani_state .count_point{position: relative; z-index: 999; padding: 10px 0;}
+.ani_state .count_point .text_count{font-size: 60px; font-size: 6rem; font-weight: 700; letter-spacing: -1px;}
+
+.ani_state .img_reward{position: relative; width: 100%; height: 280px; text-align: center; }
+.ani_state .img_reward .img_reward_goldBtn{display: flex; justify-content: center; position: relative; z-index: 1; bottom: -100px;}
+.ani_state .img_reward .img_reward_goldBtn img{width: 60%;}
+.ani_state .ani_reward_pointFalling{display: flex; position: absolute; width: 180%; top: 50%; left: 50%; transform: translate(-50%, -78%);}
+
+.popup_event_result .btn_area{padding: 40px 0 20px;}
+.popup_event_result .item_reward{display: flex; flex-direction: row; justify-content: flex-start; align-items: center; position: relative; margin-bottom: 20px;}
+.popup_event_result .item_reward .btn_reward{display: flex; justify-content: space-between; width: 100%; padding: 6px; background: #F7F9FE; border: 4px solid #EDEFF5; border-radius: 12px;}
+.popup_event_result .item_reward .btn_challenge{background: #FFD700; border: 4px solid #F2C300;}
+.popup_event_result .btn_reward .img_box{display: flex; position: relative; width: 130px;}
+.popup_event_result .btn_reward .text_box{display: flex; flex-direction: column; align-items: flex-start; justify-content: center; width: 100%; padding-left: 15px; position: relative;}
+.popup_event_result .text_box .title_btn{font-size: 20px; font-size: 2rem; font-weight: 700; line-height: 1.6;}
+.popup_event_result .text_box .guide_text{font-size: 14px; font-size: 1.4rem; text-align: left;}
+
+.popup_event_result .title_description .emphasis{font-size: 16px; font-size: 1.6rem; padding: 10px 0 0;}
+.ani_state .img_reward_fixed{width: 90%; height: 100%;}
+.popup_event_result .item_reward_column{justify-content: center; position: relative; width: 100%;}
+.popup_event_result .item_reward_column .btn_column{display: flex; flex-direction: column; justify-content: space-around; align-items: center; width: 130px; height: 130px; padding: 10px 10px; margin: 0 10px;}
+.popup_event_result .item_reward_column .btn_column.btn_refresh{background: #fbfbfb; border: 4px solid #f1f1f1;}
+.popup_event_result .item_reward_column .img_column{position: relative; width: 60%; max-width: 88px;}
+.popup_event_result .item_reward_column .img_column.img_refresh{width: 50%;}
+.popup_event_result .item_reward_column .text_btn{font-size: 16px; font-size: 1.6rem; font-weight: 700;}
+
+.popup_event_result .item_reward_column .img_column.img_challenge{position: relative; bottom: -10px; width: 100%; max-width: 100%;}
+
+
+@-webkit-keyframes introduceBadge {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  
+  @keyframes introduceBadge {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  @-webkit-keyframes pulseBadge {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.05);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @keyframes pulseBadge {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.05);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @-webkit-keyframes pulseBadge2 {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.1);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @keyframes pulseBadge2 {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.1);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  .point_lucky {
+    -webkit-animation: introduceBadge 1s linear 0s 1 both;
+            animation: introduceBadge 1s linear 0s 1 both;
+    background: rgba(255, 215, 3, 0.2);
+    border-radius: 50%;
+    height: 110px;
+    perspective: 600px;
+    position: relative;
+    width: 110px;
+  }
+  .point_lucky:before, .badge:after {
+    -webkit-animation: pulseBadge 3s cubic-bezier(0.86, 0, 0.07, 1) 0s infinite both;
+            animation: pulseBadge 3s cubic-bezier(0.86, 0, 0.07, 1) 0s infinite both;
+    border: 2px dashed #ffbe03;
+    border-radius: inherit;
+    bottom: -16px;
+    content: "";
+    left: -16px;
+    opacity: 0.2;
+    position: absolute;
+    right: -16px;
+    top: -16px;
+  }
+  .point_lucky:after {
+    -webkit-animation-name: pulseBadge2;
+            animation-name: pulseBadge2;
+    bottom: -32px;
+    left: -32px;
+    opacity: 0.1;
+    right: -32px;
+    top: -32px;
+  }
+  
+  @-webkit-keyframes introduceLabel {
+    0% {
+      opacity: 0;
+      transform: translate(-50%, -50%) scale(0.4) rotateY(-1800deg);
+    }
+    100% {
+      opacity: 1;
+      transform: translate(-50%, -50%) scale(1) rotateY(20deg);
+    }
+  }
+  
+  @keyframes introduceLabel {
+    0% {
+      opacity: 0;
+      transform: translate(-50%, -50%) scale(0.4) rotateY(-1800deg);
+    }
+    100% {
+      opacity: 1;
+      transform: translate(-50%, -50%) scale(1) rotateY(20deg);
+    }
+  }
+  @-webkit-keyframes rotateLabel {
+    0% {
+      transform: translate(-50%, -50%) rotateY(20deg);
+    }
+    50% {
+      transform: translate(-50%, -50%) rotateY(-20deg);
+    }
+    100% {
+      transform: translate(-50%, -50%) rotateY(20deg);
+    }
+  }
+  @keyframes rotateLabel {
+    0% {
+      transform: translate(-50%, -50%) rotateY(20deg);
+    }
+    50% {
+      transform: translate(-50%, -50%) rotateY(-20deg);
+    }
+    100% {
+      transform: translate(-50%, -50%) rotateY(20deg);
+    }
+  }
+  .label_point {
+    -webkit-animation: introduceLabel 2s cubic-bezier(0.19, 1, 0.22, 1) 1s 1 both, rotateLabel 5s linear 3s infinite;
+            animation: introduceLabel 2s cubic-bezier(0.19, 1, 0.22, 1) 1s 1 both, rotateLabel 5s linear 3s infinite;
+    color: #333;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    text-align: center;
+    font-size: 6.4rem;
+    font-weight: 900;   
+    
+  }
+
+.contents_attend_info{}
+.contents.contents_attend_info .content_title.top{padding: 60px 0 20px;}
+.contents.contents_attend_info .content_title h1{font-size: 2rem; font-weight: 1.3; font-weight: 600; letter-spacing: -.1rem;}
+.contents.contents_attend_info .content_title h2{font-size: 1.6rem; text-align: center; font-weight: 600;}
+.contents.contents_attend_info .content_box{padding: 20px 0;}
+.contents.contents_attend_info .wrap_graph{display: flex; padding: 60px 0 20px;}
+.wrap_graph .item_bar{display: flex; justify-content: center; align-items: center; position:relative; width: 100%; border-bottom: 1px solid #eee;}
+.wrap_graph .item_bar .progress{display: flex; position: relative; justify-content: center; align-items: flex-end; width: 85px; height: 200px; margin: 0 20px;}
+.wrap_graph .item_bar .progress_value{width: 100%; height: 0; box-shadow: 0 10px 40px -10px #fff;}
+.wrap_graph .item_bar .progress_value.value1{background: #dbeeff; animation: load1 1s normal forwards;}
+.wrap_graph .item_bar .progress_value.value2{background: #FFD700; animation: load2 1s normal forwards;}
+.wrap_graph .item_bar .progress_value span{display: flex; justify-content: center; position: relative; top:-40px; width: 100%; font-size: 2rem; font-weight: 600; text-align: center; padding: 5px 5px;}
+@keyframes load1{
+  0% {
+    height: 0;
+  }
+  100% {
+    height: 48%;
+  }
+}
+@keyframes load2{
+  0% {
+    height: 0;
+  }
+  100% {
+    height: 100%;
+  }
+}
+
+  div.graphWrap{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position:relative; 
+    width:100%; 
+    height:300px;
+    background-color:#EEEEEE;
+  }
+  div.barChart{
+    position: relative;
+    width:30px;
+    height:200px;
+    perspective-origin: center bottom ;
+    transform: translate(-50%) scaleX(2);
+    background-color:#9999ff;
+    border-radius:15px;
+    transition:height 0.25s;
+  }
+  div.barChart::before{
+    position: absolute;
+    content:"";
+    width:30px; height:30px; border-radius: 100%;
+    background-color:rgba(255,255,255,0.25);
+  }
+  div.barChart::after{
+    position: absolute;
+    content:"";
+    width:30px; height:30px; bottom:0; 
+    border-radius: 100%;
+    background-color:rgba(0,0,0,0.15);
+  }
+  div#chartValue{
+    position: absolute; left:50%;
+    transform: scaleX(0.5) translateX(-100%) rotate(-0.03deg) translateY(-15px); text-align:center;
+    font-weight:bold; font-size:24px; color:#000000;
+    filter:drop-shadow(0px 5px 3px rgba(0,0,0,0.25));
+  }
+
+  .contents_attend_info.contents_guideline{padding: 60px 0 0 !important;}
+  .contents_guideline .bul_list li{font-size: 13px; font-size: 1.3rem;}
+  .bul_list .list_title{font-weight: 600; line-height: 2.4;}
+  .bul_list .guide_text{font-size: 1.2rem; color: #666; padding: 5px 0;}
+  .bul_list .list_3depth li ul{padding-top: 5px;}
+  .highlinght{position: relative; z-index: 1;}
+  .highlinght:after{content: ""; position: absolute; left: 0; top:60%; margin-left: -1rem; width: calc(100% + 2rem); height: 50%; background: #FFD700; z-index: -1; }
+
+
+
+
+
+
+
+
+
 
 
 
