--- a/clipdown/2025/webview/cashmate/resource/css/style_cashmate.css
+++ b/clipdown/2025/webview/cashmate/resource/css/style_cashmate.css
@@ -1203,7 +1203,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
     filter:drop-shadow(0px 5px 3px rgba(0,0,0,0.25));
   }
 
-  .contents_attend_info.contents_guideline{padding: 60px 0 0 !important;}
+  .contents_attend_info.contents_guideline{padding: 60px 20px 0 !important;}
   .contents_guideline .bul_list li{font-size: 13px; font-size: 1.3rem;}
   .bul_list .list_title{font-weight: 600; line-height: 2.4;}
   .bul_list .guide_text{font-size: 1.2rem; color: #666; padding: 5px 0;}
