--- a/clipdown/2025/webview/cashmate/resource/css/style_cashmate.css
+++ b/clipdown/2025/webview/cashmate/resource/css/style_cashmate.css
@@ -1142,24 +1142,54 @@ svg{max-width: 100%; width: 100%; height: 100%;}
     
   }
 
-.contents_attend_info{}
-.contents.contents_attend_info .content_title.top{padding: 60px 0 20px;}
-.contents.contents_attend_info .content_title h1{font-size: 2rem; font-weight: 1.3; font-weight: 600; letter-spacing: -.1rem;}
-.contents.contents_attend_info .content_title h2{font-size: 1.6rem; text-align: center; font-weight: 600;}
-.contents.contents_attend_info .content_box{padding: 20px 0;}
+
+.section_attend.info_visual{background: linear-gradient( 45deg, rgb(2,0,29) 0%, rgb(19,3,58) 69%, rgb(35,6,87) 100%);}
+.contents_attend_info}
+.contents_attend_info .bg_item_attend{position: relative; width: 100%; top:60px}
+.bg_item_attend .item_coin{position: absolute; width: 50%; max-width: 100px;}
+.bg_item_attend .coin_01{top: -30px; right: -40px; width: 22%;}
+.bg_item_attend .coin_02{top: 110px; left: -45px; max-width: 110px; transform: rotate(20deg);}
+.bg_item_attend .coin_03{top: 160px; right: 0; width: 18%;} 
+.bg_item_attend .coin_04{top: 50%; left: 50%; transform: translate(-50%, 37%); width: 20%;}
+.bg_item_attend .coin_05{top: 298px; left: 20px; width: 14%; opacity: .6;}
+.bg_item_attend .coin_06{top: 360px; right: -28px; width: 13%; opacity: .8;}
+
+.blur{-webkit-filter: blur(2px); filter: blur(2px);}
+
+
+.contents.contents_attend_info .content_title.top{padding: 80px 0 20px;}
+.contents.contents_attend_info .content_title h1{font-size: 2.8rem; font-weight: 900; text-align: center; letter-spacing: -.1rem; color: #fff;}
+.contents.contents_attend_info .content_title h2{font-size: 1.8rem; text-align: center; font-weight: 700; color: #fff;}
+.contents.contents_attend_info.contents_guideline .content_title h2{color: #333;}
+.contents.contents_attend_info .content_box{padding: 20px 0 60px;}
 .contents.contents_attend_info .wrap_graph{display: flex; padding: 60px 0 20px;}
-.wrap_graph .item_bar{display: flex; justify-content: center; align-items: center; position:relative; width: 100%; border-bottom: 1px solid #eee;}
+.contents.contents_attend_info .text_graph{position: relative; color: #fff; text-align: center;}
+.wrap_graph .item_bar{display: flex; justify-content: center; align-items: center; position:relative; width: 100%;}
+.wrap_graph .item_bar .line{position: absolute; bottom: 0; left: 0; width: 100%; z-index: 1; border-bottom: 1px solid #8b8898; box-shadow: 0 0 5px #fff, 0 0 5px #fff inset;}
 .wrap_graph .item_bar .progress{display: flex; position: relative; justify-content: center; align-items: flex-end; width: 85px; height: 200px; margin: 0 20px;}
-.wrap_graph .item_bar .progress_value{width: 100%; height: 0; box-shadow: 0 10px 40px -10px #fff;}
-.wrap_graph .item_bar .progress_value.value1{background: #dbeeff; animation: load1 1s normal forwards;}
-.wrap_graph .item_bar .progress_value.value2{background: #FFD700; animation: load2 1s normal forwards;}
-.wrap_graph .item_bar .progress_value span{display: flex; justify-content: center; position: relative; top:-40px; width: 100%; font-size: 2rem; font-weight: 600; text-align: center; padding: 5px 5px;}
+.wrap_graph .item_bar .progress_value{width: 100%; height: 0; box-shadow: 0 0 15px -10px #fff;}
+.wrap_graph .item_bar .progress_value.value1{
+  animation: load1 1s normal forwards;
+  border: 1px solid; 
+  border-image: linear-gradient(0deg, #3d109e 0%, #7c14d9 100%); 
+  border-image-slice: 1;
+  background: linear-gradient(0deg, rgb(7 11 74  / 50%) 0%, rgb(62 11 107 / 50%) 100%);
+}
+.wrap_graph .item_bar .progress_value.value2{
+  animation: load2 1s normal forwards;
+  border: 1px solid; 
+  border-image: linear-gradient(0deg, #ff7b01 0%, #ffe500 100%);
+  border-image-slice: 1;
+  background: linear-gradient(0deg, rgb(255 123 1 / 50%) 0%, rgb(255 215 0 / 50%) 100%);
+
+}
+.wrap_graph .item_bar .progress_value span{display: flex; justify-content: center; position: relative; top:-40px; width: 100%; color: #fff; font-size: 2rem; font-weight: 600; text-align: center; padding: 5px 5px;}
 @keyframes load1{
   0% {
     height: 0;
   }
   100% {
-    height: 48%;
+    height: 30%;
   }
 }
 @keyframes load2{
@@ -1210,7 +1240,10 @@ svg{max-width: 100%; width: 100%; height: 100%;}
     filter:drop-shadow(0px 5px 3px rgba(0,0,0,0.25));
   }
 
-  .contents_attend_info.contents_guideline{padding: 30px 20px 30px !important;}
+
+
+
+  .contents_attend_info.contents_guideline{background: #fff; padding: 30px 20px 20px !important;}
   .contents_guideline .bul_list li{font-size: 13px; font-size: 1.3rem;}
   .bul_list .list_title{font-weight: 600; line-height: 2.4;}
   .bul_list .guide_text{font-size: 1.2rem; color: #666; padding: 5px 0;}
