--- a/clipdown/2025/webview/cashmate/resource/css/style_cashmate.css
+++ b/clipdown/2025/webview/cashmate/resource/css/style_cashmate.css
@@ -1173,14 +1173,14 @@ svg{max-width: 100%; width: 100%; height: 100%;}
   border: 1px solid; 
   border-image: linear-gradient(0deg, #3d109e 0%, #7c14d9 100%); 
   border-image-slice: 1;
-  background: linear-gradient(0deg, rgb(7 11 74  / 50%) 0%, rgb(62 11 107 / 50%) 100%);
+  background: linear-gradient(0deg, rgb(7 11 74 ) 0%, rgb(62 11 107) 100%);
 }
 .wrap_graph .item_bar .progress_value.value2{
   animation: load2 1s normal forwards;
   border: 1px solid; 
   border-image: linear-gradient(0deg, #ff7b01 0%, #ffe500 100%);
   border-image-slice: 1;
-  background: linear-gradient(0deg, rgb(255 123 1 / 50%) 0%, rgb(255 215 0 / 50%) 100%);
+  background: linear-gradient(0deg, rgb(255 123 1 / 85%) 0%, rgb(255 215 0 / 85%) 100%);
 
 }
 .wrap_graph .item_bar .progress_value span{display: flex; justify-content: center; position: relative; top:-40px; width: 100%; color: #fff; font-size: 2rem; font-weight: 600; text-align: center; padding: 5px 5px;}
